@@ -1,0 +1,9 @@
+package com.paragon.impl.event.render
+
+import com.paragon.bus.event.CancellableEvent
+
+/**
+ * @author Surge
+ * @since 21/11/2022
+ */
+class RenderWorldEvent : CancellableEvent()
